# liquidity-mining

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
programs/bonded-cys/: Cargo.toml
programs/bonded-cys/src/: bonded_cys_token.rs  cys_token.rs  lib.rs
programs/bonded-cys/src/instructions/: bond.rs  mod.rs  unbond.rs
programs/cykura-staker/: Cargo.toml
programs/cykura-staker/src/: lib.rs  reward_math.rs  state.rs
programs/cykura-staker/src/instructions/: add_reward.rs  claim_reward.rs  create_boosted_incentive.rs  create_deposit.rs  create_incentive.rs  create_incentive_boosted.rs  create_reward_account.rs  end_incentive.rs  mod.rs  stake_token.rs  transfer_deposit.rs  unstake_token.rs  unstake_token_boosted.rs  withdraw_token.rs
programs/liquidity-mining/: Cargo.toml
programs/liquidity-mining/src/: lib.rs
scripts/: 1-voter-setup.ts  generate-idl-types.sh
src/: constants.ts  index.ts  rewardMath.test.ts  rewardMath.ts  sdk.ts
src/programs/: bondedCys.ts  cykuraStaker.ts  index.ts
src/wrappers/: deposit.ts  incentive.ts  index.ts  pda.ts  reward.ts  stake.ts  types.ts
src/wrappers/cykuraStaker/: deposit.ts  incentive.ts  index.ts  pda.ts  types.ts
tests/: bonded-cys.ts  cykura-staker.ts  liquidity-mining.ts
tests/bonded-cys-utils/: setupWorkspace.ts  testToken.ts
tests/utils/: SolanaTickDataProvider.ts  createCyclosPosition.ts  createMintsAndAirdrop.ts  runAfterPoolCreation.ts  setupEscrowAndLockTokens.ts  setupWorkspace.ts
