[package]
name = "cykura-staker"
version = "0.1.0"
description = "Liquidity mining program for Cykura (prev Cyclos)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cykura_staker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.23.0"
anchor-spl = "0.23.0"
locked-voter = { version = "0.5.1", features = ["cpi"] }
# govern = "*"