[package]
name = "cykura-staker"
version = "0.1.0"
description = "Liquidity mining program for Cykura (prev Cyclos)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cykura_staker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.23.0", features = ["init-if-needed"] }
anchor-spl = "0.23.0"
cyclos-core = { version = "0.1.5", features = ["no-entrypoint"] }
