[package]
name = "liquidity-mining"
version = "0.1.0"
description = "Liquidity mining program for Cyclos core"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "liquidity_mining"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.0"
anchor-spl = "0.22.0"
locked-voter = { version = "0.5.1", features = ["cpi"] }
# govern = "*"